fix: preview overflow

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 }
 
 .backdrop img {
-  max-height: 100%;
+  max-height: 85%;
   max-width: 100%;
   margin: auto;
 }
